<resources>
    <string name="app_name">CoShield-19</string>
    <string name="sign_in"> Sign me in </string>
    <string name="sign_up"> Sign up </string>
    <string name="lost_pass"> Forget Password  </string>
    <string name="Email"> Email </string>
    <string name="Password"> Password </string>
    <string name="username"> Username </string>
    <string name="wrong_pass">" Wrong Credentials "</string>
    <string name="appname"> CoShield-19 </string>
    <string name="go_to">Check If Infected </string>
    <string name="phone_number">phone number</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="dash_board">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="logout">logout</string>
    <string name="settings_text">Settings</string>
    <string name="heath_condition"> Heath Status</string>
    <string name="GlobalMap">Check Global/local Cases</string>
    <string name="Take_Test">Take/Retake a test </string>
    <string name="upload_photo">upload photo </string>
    <string name="update">update </string>
    <string name="male">male</string>
    <string name="female">"female "</string>
    <string name="take_test">Take Test </string>
    <string name="sex">sex </string>
    <string name="height">height </string>
    <string name="weight">weight </string>
    <string name="age">Age </string>
    <string name="fever">"Fever "</string>
    <string name="sorethroat">SoreThroat </string>
    <string name="smelltaste">Loss of smell and taste </string>
    <string name="tireddness">Tiredness </string>
    <string name="Symptoms">Symptoms </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout_id">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="SubmitSymptoms">Selected Symptoms</string>
    <string name="UserInfectedWarning">Please use the application to search for a nearby lab , your are more likely to be infected with Covid</string>
    <string name="NotInfected"> it looks like you\'re not infected.</string>
    <string name="CheckNearbyLabs">Check Nearby labs</string>
    <string name="nearby_hospitals">Nearby Hospitals</string>
    <string name="NotInfectedTitle">Not Infected with Covid-19</string>


</resources>