<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7"
    android:background="@color/cardColor"
    tools:context="com.dsi32g1.coshield19.taketest"
    android:padding="30dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:text="@string/take_test"
        android:layout_marginBottom="70dp">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"

            android:text="@string/sex">
        </TextView>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton android:id="@+id/radio_homme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
            <RadioButton android:id="@+id/radio_femme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/height">
        </TextView>
        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/height"

            android:layout_height="match_parent"
            android:inputType="number"
            android:importantForAutofill="no">
        </EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/weight">
        </TextView>
        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:importantForAutofill="no"

            android:inputType="number">
        </EditText>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/age"
            >

        </TextView>
        <Spinner
            android:id="@+id/age_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Symptoms"
            android:layout_marginBottom="20dp">

        </TextView>

        <CheckBox android:id="@+id/fever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fever"
            android:layout_marginBottom="20dp"
            android:onClick="onCheckboxClicked"/>

        <CheckBox android:id="@+id/smell_taste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smelltaste"
            android:layout_marginBottom="20dp"
            android:onClick="onCheckboxClicked"/>



        <CheckBox android:id="@+id/sore_throat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sorethroat"
            android:layout_marginBottom="20dp"
            android:onClick="onCheckboxClicked"/>
        <CheckBox android:id="@+id/tiredness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tireddness"
            android:layout_marginBottom="20dp"
            android:onClick="onCheckboxClicked"/>
        <Button
            android:layout_margin="20dp"
            android:id="@+id/go2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/REd"
            android:text="@string/go_to"
            android:textColor="#fff">

        </Button>
</LinearLayout>

</LinearLayout>