<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context="com.dsi32g1.coshield19.Home"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu"
        >

    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardColor"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    tools:ignore="NestedWeights">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/heath_condition"
                            android:src="@drawable/heath_condition" />

                        <TextView
                            android:layout_width="105dp"
                            android:layout_height="wrap_content"
                            android:text="@string/heath_condition"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnprof"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/checknearby"
                            android:contentDescription="@string/CheckNearbyLabs" />

                        <TextView
                            android:layout_width="105dp"
                            android:layout_height="wrap_content"
                            android:text="@string/CheckNearbyLabs"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/CheckNearbyLabs"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    tools:ignore="NestedWeights">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/taketest"
                            android:contentDescription="@string/take_test" />

                        <TextView
                            android:layout_width="105dp"
                            android:layout_height="wrap_content"
                            android:text="@string/Take_Test"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/take_btn"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:background="#fff"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/global"
                            android:contentDescription="@string/GlobalMap" />

                        <TextView
                            android:layout_width="105dp"
                            android:layout_height="wrap_content"
                            android:text="@string/GlobalMap"
                            android:textAlignment="center" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/check_global"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/transparent" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>